Added localization to messages. Added protection against repeated query execution by pressing F5. Added filter with forbidding page back with old data. Added protection from xss attacks. Added services jsp. Modified jsp.

--- a/src/main/resources/locale/pagecontent.properties
+++ b/src/main/resources/locale/pagecontent.properties
@@ -47,7 +47,7 @@ table.title.order.status=Order status
 table.title.description=Description
 table.title.feedback=Feedback
 table.title.operate=Operate
-hi=Hi
+hi=Hi, 
 or=or
 to=to
 button.create.order=Create order
@@ -71,9 +71,8 @@ button.return.to.client.selection=Return to client\\'s selection
 button.delete.from.client.selection=Delete from client\\'s selection
 description.feedback.updated=Feedback is successfully updated.
 description.feedback.update.failed=Feedback update is failed.
-description.order.status.with.id=Order's status with id=
-description.order.changed=has successfully changed from
-description.order.not.changed=has not changed!
+description.order.status.changed=Order\'s status was successfully changed.
+description.order.not.changed=Order\'s status has not changed!
 description.order.not.registered=Your order has not registered! Try again.
 description.order.registered=Your order has successfully registered!
 description.order.not.updated=Impossible to update order!
@@ -99,6 +98,7 @@ error.message.phone.number=Phone number is not valid.
 error.message.mark=Mark is not valid.
 error.message.feedback.empty=Feedback shouldn't be empty.
 error.message.feedback.cannot.update=Feedback cannot be updated.
+error.message.login=Incorrect username or password
 feedback.enter=Enter feedback:
 feedback.mark=Your mark (from 1 to 5):
 order.data=Order data
@@ -131,6 +131,17 @@ user.email=Email:
 user.phone.number=Phone number:
 user.discount=Discount:
 user.discount.status=Discount status:
+user.status.update.success=User status has changed.
+user.status.update.failed.cause.same=Picked user status is the same as current.
+user.status.update.failed=Cannot change user status.
+user.role.update.success=User\'s role has changed.
+user.role.failed.cause.same=Picked role is the same as current.
+user.role.update.failed=Cannot change user\'s role. Contact technical support.
+user.discount.update.success=User\'s discount status has changed.
+user.discount.update.failed.cause.same=Picked discount status is the same as current.
+user.discount.cannot.update=Cannot change user\'s discount status.
+user.delete.success=User was deleted.
+user.delete.failed=Cannot delete user cause this user has orders or just cannot be deleted.
 user.update.password.change=Password change
 user.update.password.enter.new=Enter new password:
 user.update.password.confirm.new=Confirm new password:
@@ -144,6 +155,7 @@ user.update.change.role=Change user role:
 user.update.change.status=Change user status:
 user.enter.username=Enter username:
 user.enter.password=Enter password:
+user.enter.current.password=Current password:
 user.enter.password.confirm=Confirm password:
 user.enter.email=Enter email:
 user.enter.first.name=Enter first name:
@@ -152,6 +164,7 @@ user.enter.phone.number=Enter phone number:
 header.orders.clients=All clients\' orders
 header.users=Users
 header.services=Services
+header.services.info=Services info
 header.orders=My orders
 header.new.order=New order
 header.profile=Profile
@@ -160,3 +173,20 @@ header.login=LogIn
 header.register=Register
 header.ru=RU
 header.en=EN
+services.desc=Our services
+services.combing=Combing.
+services.combing.description=Making hair tidy with a comb.
+services.nail.clipping=Nail clipping.
+services.nail.clipping.description=Cutting nails using a nail trimmer designed for cats.
+services.ear.cleaning=Ears cleaning.
+services.ear.cleaning.description=Cleaning ears with special tools.
+services.bathing=Bathing.
+services.bathing.description=Bathing with professional cat shampoo and conditioner.
+services.drying=Drying.
+services.drying.description=Drying with a hair dryer.
+services.haircut=Haircut.
+services.haircut.description=Machine haircut.
+services.molting=Express molting.
+services.molting.description=Combing with a special tool, bathing, drying and ear cleaning.
+services.all.complex=All complex.
+services.all.description=Combing, bathing, drying, ear cleaning, nail clipping and haircut.
